small fixes based on Sonar warnings